Linechart changes